--- a/Merge_Barclays_Reuters.ipynb
+++ b/Merge_Barclays_Reuters.ipynb
@@ -16,7 +16,15 @@
     "from pandas.tseries.offsets import MonthEnd\n",
     "import calendar\n",
     "import country_converter as coco\n",
-    "import os as os"
+    "import os as os\n",
+    "from dotenv import dotenv_values, find_dotenv\n",
+    "\n",
+    "# this looks for your configuration file and then reads it as a dictionary\n",
+    "config = dotenv_values(find_dotenv())\n",
+    "\n",
+    "# set path using the dictionary key for which one you want\n",
+    "path_cleandata = os.path.abspath(config[\"CLEANDATA\"]) + '\\\\'\n",
+    "path_rawdata = os.path.abspath(config[\"RAWDATA\"]) + '\\\\'"
    ]
   },
   {
@@ -26,27 +34,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_rawdata = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/RawData/'\n",
-    "path_cleandata = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/CleanData/'\n",
-    "\n",
-    "# edit these to load and save different types of data sources.\n",
-    "# loadAppend = '_OurData_NScode'\n",
-    "# saveAppend = '_OurData_NScode'\n",
-    "loadAppend = ''\n",
-    "saveAppend = ''\n",
-    "\n",
-    "\n",
     "# Import Reuters forward rates\n",
-    "Reuters_FX_Fwd_D = pd.read_pickle(path_cleandata+'Reuters_FX_Fwd_D'+loadAppend+'.pkl')\n",
+    "Reuters_FX_Fwd_D = pd.read_pickle(path_cleandata+'Reuters_FX_Fwd_D'+'.pkl')\n",
     "\n",
     "# Import Reuters spot rates\n",
-    "Reuters_FX_Spot_D = pd.read_pickle(path_cleandata+'Reuters_FX_Spot_D'+loadAppend+'.pkl')\n",
+    "Reuters_FX_Spot_D = pd.read_pickle(path_cleandata+'Reuters_FX_Spot_D'+'.pkl')\n",
     "\n",
     "# Import Barclays forward rates\n",
-    "Barclays_FX_Fwd_D = pd.read_pickle(path_cleandata+'Barclays_FX_Fwd_D'+loadAppend+'.pkl')\n",
+    "Barclays_FX_Fwd_D = pd.read_pickle(path_cleandata+'Barclays_FX_Fwd_D'+'.pkl')\n",
     "\n",
     "# Import Barclays spot rates\n",
-    "Barclays_FX_Spot_D = pd.read_pickle(path_cleandata+'Barclays_FX_Spot_D'+loadAppend+'.pkl')\n",
+    "Barclays_FX_Spot_D = pd.read_pickle(path_cleandata+'Barclays_FX_Spot_D'+'.pkl')\n",
     "\n",
     "# for some reason my data has these column names. Need to go back to Barclays \n",
     "Barclays_FX_Spot_D.rename(columns={\"index\": \"Date\"}, inplace=True)\n",
@@ -127,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "943d5474",
    "metadata": {},
    "outputs": [],
@@ -148,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6d363c3f",
    "metadata": {},
    "outputs": [],
@@ -253,15 +251,15 @@
    "source": [
     "# Save monthly data using pickle\n",
     "\n",
-    "BR_Spot_M.to_pickle(path_cleandata+'BR_Spot_dM'+saveAppend+'.pkl')\n",
-    "BR_Fwd_M.to_pickle(path_cleandata+'BR_Fwd_dM'+saveAppend+'.pkl')\n",
+    "BR_Spot_M.to_pickle(path_cleandata+'BR_Spot_dM'+'.pkl')\n",
+    "BR_Fwd_M.to_pickle(path_cleandata+'BR_Fwd_dM'+'.pkl')\n",
     "\n",
     "with open(path_cleandata+'BR_Countries.pkl', 'wb') as f:\n",
     "    pickle.dump(List_names, f)\n",
     "    \n",
     "# Save daily data using pickle\n",
-    "BR_Spot_D.to_pickle(path_cleandata+'BR_Spot_D'+saveAppend+'.pkl')\n",
-    "BR_Fwd_D.to_pickle(path_cleandata+'BR_Fwd_D'+saveAppend+'.pkl')"
+    "BR_Spot_D.to_pickle(path_cleandata+'BR_Spot_D'+'.pkl')\n",
+    "BR_Fwd_D.to_pickle(path_cleandata+'BR_Fwd_D'+'.pkl')"
    ]
   },
   {
@@ -289,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
