change paths and remove old tests BR CPI

--- a/Import_BR_CPI.ipynb
+++ b/Import_BR_CPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ef3ea276",
    "metadata": {},
    "outputs": [],
@@ -16,45 +16,31 @@
     "import calendar\n",
     "import country_converter as coco\n",
     "import os\n",
+    "from dotenv import dotenv_values, find_dotenv\n",
     "\n",
+    "# this looks for your configuration file and then reads it as a dictionary\n",
+    "config = dotenv_values(find_dotenv())\n",
     "\n",
-    "# Options for loading and saving\n",
-    "LoadOurData = True\n",
-    "#saveAppend = '_OurData_NScode'\n",
-    "saveAppend = ''\n",
+    "# set path using the dictionary key for which one you want\n",
+    "path_cleandata = os.path.abspath(config[\"CLEANDATA\"]) + '\\\\'\n",
+    "newpath = os.path.abspath(config[\"RAWDATA\"]) + '\\\\'\n",
     "\n",
+    "# Import monthly CPI\n",
+    "CPI_temp1 = pd.read_excel(newpath+'CPI Monthly - Datastream - Raw Data.xlsx', sheet_name='CPI Monthly', skiprows=0)\n",
     "\n",
-    "\n",
-    "if LoadOurData==False:\n",
-    "    # Set current directory as newpath\n",
-    "    newpath = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/RawData/'\n",
-    "    \n",
-    "    # Import monthly CPI\n",
-    "    CPI_temp1 = pd.read_excel(newpath+'DataStream_CPI_fortesting.xlsx', sheet_name='Sheet1', skiprows=1)\n",
-    "    \n",
-    "    # Convert date to datetime object (from excel format which counts days since 1900)\n",
-    "    CPI_temp1['Date'] = pd.to_datetime(CPI_temp1['Code'], unit='D', origin='1899-12-31')\n",
-    "    \n",
-    "else:\n",
-    "    # Set current directory as newpath\n",
-    "    newpath = os.path.normpath(os.getcwd()+os.sep+os.pardir)+\"/RawData/\"\n",
-    "        # Import monthly CPI\n",
-    "    CPI_temp1 = pd.read_excel(newpath+'CPI Monthly - Datastream - Raw Data.xlsx', sheet_name='CPI Monthly', skiprows=0)\n",
-    "\n",
-    "    # Convert date to datetime object \n",
-    "    CPI_temp1['Date'] = pd.to_datetime(CPI_temp1['Code'])\n",
+    "# Convert date to datetime object \n",
+    "CPI_temp1['Date'] = pd.to_datetime(CPI_temp1['Code'])\n",
     "    \n",
     "# Load in EU CPI\n",
-    "if LoadOurData==True:\n",
-    "    CPI_temp_EU = pd.read_excel(newpath+'CPI Monthly - Datastream - Raw Data.xlsx', sheet_name='CPI - Euro Monthly', skiprows=0)\n",
-    "    CPI_temp_EU['Date'] = pd.to_datetime(CPI_temp_EU['Date'])\n",
-    "    CPI_temp1['year']=CPI_temp1['Date'].dt.year\n",
-    "    CPI_temp1['month']=CPI_temp1['Date'].dt.month\n",
-    "    CPI_temp_EU['year']=CPI_temp_EU['Date'].dt.year\n",
-    "    CPI_temp_EU['month']=CPI_temp_EU['Date'].dt.month\n",
-    "    CPI_temp_EU=CPI_temp_EU.drop(columns='Date')\n",
-    "    CPI_temp1 = pd.merge(CPI_temp1,CPI_temp_EU,on=['year','month'],how='left')\n",
-    "    CPI_temp1.drop(columns=['year','month'],inplace=True)\n",
+    "CPI_temp_EU = pd.read_excel(newpath+'CPI Monthly - Datastream - Raw Data.xlsx', sheet_name='CPI - Euro Monthly', skiprows=0)\n",
+    "CPI_temp_EU['Date'] = pd.to_datetime(CPI_temp_EU['Date'])\n",
+    "CPI_temp1['year']=CPI_temp1['Date'].dt.year\n",
+    "CPI_temp1['month']=CPI_temp1['Date'].dt.month\n",
+    "CPI_temp_EU['year']=CPI_temp_EU['Date'].dt.year\n",
+    "CPI_temp_EU['month']=CPI_temp_EU['Date'].dt.month\n",
+    "CPI_temp_EU=CPI_temp_EU.drop(columns='Date')\n",
+    "CPI_temp1 = pd.merge(CPI_temp1,CPI_temp_EU,on=['year','month'],how='left')\n",
+    "CPI_temp1.drop(columns=['year','month'],inplace=True)\n",
     "\n",
     "# Replace original dates (15th of each month) by end-of-month dates\n",
     "CPI_temp1['EndOfMonth'] = pd.to_datetime(CPI_temp1['Date']) + MonthEnd(1)\n",
@@ -63,17 +49,10 @@
     "\n",
     "\n",
     "# Import quarterly CPI\n",
-    "if LoadOurData==False:\n",
-    "    CPI_temp2_Q = pd.read_excel(newpath+'DataStream_CPI_fortesting.xlsx', sheet_name='Sheet2', skiprows=1)\n",
-    "    \n",
-    "    # Create date column in YYYYQQ format\n",
-    "    CPI_temp2_Q['Date'] = CPI_temp2_Q['Code'].str[3:7]+'Q'+CPI_temp2_Q['Code'].str[1:2]\n",
-    "    \n",
-    "else:\n",
-    "    CPI_temp2_Q = pd.read_excel(newpath+'CPI Monthly - Datastream - Raw Data.xlsx', sheet_name='CPI Quarterly AUS NZ', skiprows=0)\n",
-    "    \n",
-    "    # Create date column in YYYYQQ format\n",
-    "    CPI_temp2_Q['Date'] = pd.to_datetime(CPI_temp2_Q['Code']).dt.year.astype(str)+'Q'+pd.to_datetime(CPI_temp2_Q['Code']).dt.quarter.astype(str)\n",
+    "CPI_temp2_Q = pd.read_excel(newpath+'CPI Monthly - Datastream - Raw Data.xlsx', sheet_name='CPI Quarterly AUS NZ', skiprows=0)\n",
+    "\n",
+    "# Create date column in YYYYQQ format\n",
+    "CPI_temp2_Q['Date'] = pd.to_datetime(CPI_temp2_Q['Code']).dt.year.astype(str)+'Q'+pd.to_datetime(CPI_temp2_Q['Code']).dt.quarter.astype(str)\n",
     "\n",
     "\n",
     "# Convert string into period object\n",
@@ -95,17 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "829ce329",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import list of codes and countries\n",
-    "if LoadOurData==False:\n",
-    "    listcodes3 = pd.read_excel(newpath+'DataStream_CPI.xlsx', sheet_name='Sheet3',header=None,usecols=[0, 2], names=['variable', 'Country'])\n",
-    "else:\n",
-    "    listcodes3 = pd.read_excel(newpath+'CPI Monthly - Datastream - Raw Data.xlsx', sheet_name='CPI Codes',header=None,usecols=[0, 2], names=[ 'Country','variable'],skiprows=1)\n",
-    "    listcodes3['Country'] = listcodes3['Country'].str.upper()\n",
+    "listcodes3 = pd.read_excel(newpath+'CPI Monthly - Datastream - Raw Data.xlsx', sheet_name='CPI Codes',header=None,usecols=[0, 2], names=[ 'Country','variable'],skiprows=1)\n",
+    "listcodes3['Country'] = listcodes3['Country'].str.upper()\n",
     "    \n",
     "for ind in listcodes3.index:\n",
     "    if listcodes3.loc[ind][1] == 'JORDAN':\n",
@@ -134,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7f4402ce",
    "metadata": {
     "scrolled": false
@@ -154,9 +130,8 @@
     "CPI_M = CPI_M.pivot_table(index='EndOfMonth',columns='IMF Code',values='value')\n",
     "\n",
     "# If using our data we need to add columns for Australia and New Zealand\n",
-    "if LoadOurData==True:\n",
-    "    CPI_M[196] = np.nan # New Zealand (yes, I am putting it first)\n",
-    "    CPI_M[193] = np.nan # Australia\n",
+    "CPI_M[196] = np.nan # New Zealand (yes, I am putting it first)\n",
+    "CPI_M[193] = np.nan # Australia\n",
     "\n",
     "    \n",
     "#CPI_M.reset_index(inplace=True)\n",
@@ -182,13 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "05fcd7b0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select subsamples\n",
-    "path_cleandata = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/CleanData/'\n",
     "with open(path_cleandata+'BR_Spot_dM.pkl', 'rb') as f:\n",
     "    BR_Spot_M = pickle.load(f)\n",
     "\n",
@@ -203,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1b1c5541",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save\n",
-    "CPI_M.to_pickle(path_cleandata+'DataStream_CPI_M'+saveAppend+'.pkl')\n",
-    "BR_CPI_M.to_pickle(path_cleandata+'DataStream_BR_CPI_M'+saveAppend+'.pkl')\n"
+    "CPI_M.to_pickle(path_cleandata+'DataStream_CPI_M'+'.pkl')\n",
+    "BR_CPI_M.to_pickle(path_cleandata+'DataStream_BR_CPI_M'+'.pkl')\n"
    ]
   }
  ],
@@ -230,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
