--- a/Import_IMF_dots.ipynb
+++ b/Import_IMF_dots.ipynb
@@ -12,12 +12,18 @@
     "from datetime import datetime\n",
     "import country_converter as coco\n",
     "import os\n",
+    "from dotenv import dotenv_values, find_dotenv\n",
+    "\n",
+    "# this looks for your configuration file and then reads it as a dictionary\n",
+    "config = dotenv_values(find_dotenv())\n",
+    "\n",
+    "# set path using the dictionary key for which one you want\n",
+    "path_cleandata = os.path.abspath(config[\"CLEANDATA\"]) + '\\\\'\n",
+    "path_rawdata = os.path.abspath(config[\"RAWDATA\"]) + '\\\\'\n",
     "\n",
     "cc = coco.CountryConverter()\n",
     "\n",
     "# Loading DOTS data from csv file\n",
-    "path_rawdata = os.getcwd()+'/RawData/'\n",
-    "path_rawdata = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/RawData/'\n",
     "dots = pd.read_csv(path_rawdata+'IMF_DOTS.csv',low_memory=False)\n",
     "tmpdots = dots.copy()\n",
     "\n",
@@ -143,7 +149,6 @@
     "tmp['imports_d'].fillna(tmp['exports_o'])\n",
     "\n",
     "# Save\n",
-    "path_cleandata = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/CleanData/'\n",
     "tmp.to_pickle(path_cleandata+'IMF_DOTS.pkl')"
    ]
   },
@@ -172,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
