--- a/Import_PWT.ipynb
+++ b/Import_PWT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "1b273830",
    "metadata": {},
    "outputs": [],
@@ -11,15 +11,22 @@
     "from datetime import datetime\n",
     "import country_converter as coco\n",
     "import os\n",
+    "from dotenv import dotenv_values, find_dotenv\n",
+    "\n",
+    "# this looks for your configuration file and then reads it as a dictionary\n",
+    "config = dotenv_values(find_dotenv())\n",
+    "\n",
+    "# set path using the dictionary key for which one you want\n",
+    "path_cleandata = os.path.abspath(config[\"CLEANDATA\"]) + '\\\\'\n",
+    "path_rawdata = os.path.abspath(config[\"RAWDATA\"]) + '\\\\'\n",
     "\n",
     "cc = coco.CountryConverter()\n",
     "\n",
     "# To check consistency with Richmond's R code, use pwt81\n",
-    "path_rawdata =os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/RawData/'\n",
-    "pwtdt = pd.read_excel(path_rawdata+'pwt81.xlsx', sheet_name='Data')\n",
+    "# pwtdt = pd.read_excel(path_rawdata+'pwt81.xlsx', sheet_name='Data')\n",
     "# Once consistency with Richmond's R code is checked, we can use\n",
     "# pwt1001 and erase the lines above\n",
-    "# pwtdt = pd.read_excel('pwt1001.xlsx', sheet_name='Data')\n",
+    "pwtdt = pd.read_excel(path_rawdata+'pwt1001.xlsx', sheet_name='Data')\n",
     "\n",
     "# Select relevant columns only\n",
     "pwtdt = pwtdt[['countrycode', 'year', 'pop', 'ccon','cgdpo']]\n",
@@ -68,7 +75,6 @@
     "pwtdt.sort_values(by=['iso3','year'])\n",
     "\n",
     "# Save output\n",
-    "path_cleandata = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/CleanData/'\n",
     "pwtdt.to_pickle(path_cleandata+'PWT.pkl')\n",
     "\n",
     "\n"
@@ -99,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
