change paths and remove old tests WDI

--- a/Import_WDI.ipynb
+++ b/Import_WDI.ipynb
@@ -12,6 +12,14 @@
     "import country_converter as coco\n",
     "import wbgapi as wb\n",
     "import os\n",
+    "import os\n",
+    "from dotenv import dotenv_values, find_dotenv\n",
+    "\n",
+    "# this looks for your configuration file and then reads it as a dictionary\n",
+    "config = dotenv_values(find_dotenv())\n",
+    "\n",
+    "# set path using the dictionary key for which one you want\n",
+    "path_cleandata = os.path.abspath(config[\"CLEANDATA\"]) + '\\\\'\n",
     "\n",
     "cc = coco.CountryConverter()"
    ]
@@ -19,17 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b8162efa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define path\n",
-    "path_rawdata = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/RawData/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "ad482d2a",
    "metadata": {},
    "outputs": [],
@@ -56,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "50a2fd4f",
    "metadata": {},
    "outputs": [],
@@ -71,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9a82ac44",
    "metadata": {},
    "outputs": [],
@@ -82,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4e8c8eeb",
    "metadata": {},
    "outputs": [],
@@ -98,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0d78e576",
    "metadata": {},
    "outputs": [],
@@ -109,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ba3e4a74",
    "metadata": {},
    "outputs": [],
@@ -126,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "596ac0d9",
    "metadata": {},
    "outputs": [],
@@ -156,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "731f7070",
    "metadata": {},
    "outputs": [],
@@ -165,7 +162,6 @@
     "wdi.sort_values(by=['iso3','year'])\n",
     "\n",
     "# Save output\n",
-    "path_cleandata = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/CleanData/'\n",
     "wdi.to_pickle(path_cleandata+'WDI.pkl')\n"
    ]
   },
@@ -194,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
