change paths and remove old tests BR_FX

--- a/Import_BR_FXdata.ipynb
+++ b/Import_BR_FXdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "f61dee71",
    "metadata": {},
    "outputs": [],
@@ -13,35 +13,15 @@
     "import xlrd\n",
     "import pickle\n",
     "import calendar\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "03cf3bd1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Options for loading and saving\n",
-    "LoadOurData = True\n",
-    "# loadAppend_CPI = '_OurData_NScode'\n",
-    "# loadAppend_FX= '_OurData_NScode'\n",
-    "# saveAppend = '_OurData_NScode'\n",
-    "loadAppend_CPI = ''\n",
-    "loadAppend_FX= ''\n",
-    "saveAppend = ''\n",
+    "import os\n",
+    "from dotenv import dotenv_values, find_dotenv\n",
     "\n",
-    "path_cleandata = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/CleanData/'\n",
-    "   \n",
-    "# Nick: I don't think this is used!\n",
-    "#if LoadOurData==False:\n",
-    "#    path_rawdata = os.getcwd()+'/RawData/'\n",
-    "#else:\n",
-    "path_rawdata = os.path.normpath(os.getcwd()+os.sep+os.pardir)+'/RawData/'\n",
-    "    #path_rawdata =  os.path.normpath(os.getcwd()+os.sep+os.pardir+os.sep+os.pardir)+\"/Nick and Jamie's Barclays and Reuters/Raw and processed data/toUse/\"\n",
-    "    \n",
-    "    "
+    "# this looks for your configuration file and then reads it as a dictionary\n",
+    "config = dotenv_values(find_dotenv())\n",
+    "\n",
+    "# set path using the dictionary key for which one you want\n",
+    "path_cleandata = os.path.abspath(config[\"CLEANDATA\"]) + '\\\\'\n",
+    "path_rawdata = os.path.abspath(config[\"RAWDATA\"]) + '\\\\'"
    ]
   },
   {
@@ -52,13 +32,13 @@
    "outputs": [],
    "source": [
     "# Import forward rates\n",
-    "fwdwide = pd.read_pickle(path_cleandata+'BR_Fwd_dM'+loadAppend_FX+'.pkl')\n",
+    "fwdwide = pd.read_pickle(path_cleandata+'BR_Fwd_dM'+'.pkl')\n",
     "\n",
     "# Import spot rates\n",
-    "spotwide = pd.read_pickle(path_cleandata+'BR_Spot_dM'+loadAppend_FX+'.pkl')\n",
+    "spotwide = pd.read_pickle(path_cleandata+'BR_Spot_dM'+'.pkl')\n",
     "\n",
     "# Import CPI\n",
-    "cpiwide = pd.read_pickle(path_cleandata+'DataStream_CPI_M'+loadAppend_CPI+'.pkl')"
+    "cpiwide = pd.read_pickle(path_cleandata+'DataStream_CPI_M'+'.pkl')"
    ]
   },
   {
@@ -103,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "630f450c",
    "metadata": {},
    "outputs": [],
@@ -127,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "bdd284f0",
    "metadata": {},
    "outputs": [],
@@ -139,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "9f0a7811",
    "metadata": {},
    "outputs": [],
@@ -167,13 +147,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "42688790",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save\n",
-    "alldata[['iso3', 'Date', 'spot', 'fwd1', 'cpi', 'cpius']].to_pickle(path_cleandata+'BR_Spot_Fwd_Real'+saveAppend+'.pkl')"
+    "alldata[['iso3', 'Date', 'spot', 'fwd1', 'cpi', 'cpius']].to_pickle(path_cleandata+'BR_Spot_Fwd_Real'+'.pkl')"
    ]
   }
  ],
@@ -193,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
